# cubek

./: Cargo.toml
.github/workflows/: ci.yml
benchmarks/: Cargo.toml
crates/cubek/: Cargo.toml
crates/cubek-attention/: Cargo.toml
crates/cubek-convolution/: Cargo.toml
crates/cubek-convolution/src/eval/: cpu_reference.rs
crates/cubek-fft/: Cargo.toml
crates/cubek-fft/src/eval/: cpu_reference.rs
crates/cubek-interpolate/: Cargo.toml
crates/cubek-interpolate/src/: lib.rs
crates/cubek-matmul/: Cargo.toml
crates/cubek-matmul/src/definition/: blueprint.rs
crates/cubek-matmul/src/eval/: cpu_reference.rs
crates/cubek-matmul/tests/matmul/: bias.rs  launcher_strategy.rs  mod.rs
crates/cubek-quant/: Cargo.toml
crates/cubek-quant/src/: dequantize_tiled.rs  lib.rs
crates/cubek-quant/tests/quant/: mod.rs  tiled.rs
crates/cubek-reduce/: Cargo.toml
crates/cubek-resample/: README.md
crates/cubek-resample/src/: lib.rs
crates/cubek-resample/src/components/: base.rs  coordinates.rs  mod.rs  resample_instruction.rs  tap_resolver.rs
crates/cubek-resample/src/definition/: accumulator.rs  base.rs  boundary.rs  kernel.rs  mod.rs  normalization.rs  placement.rs  tile_size.rs  window.rs
crates/cubek-resample/src/launch/: base.rs
crates/cubek-resample/tests/resample/: base.rs  resample.rs
crates/cubek-std/: Cargo.toml
crates/cubek-std/src/: lib.rs  matrix_layout.rs
crates/cubek-test-utils/: Cargo.toml
crates/cubek-test-utils/src/: tile_input.rs
crates/cubek-tile/src/: lib.rs
xtask/: Cargo.toml
xtask/src/commands/: test.rs
(+45 files in other folders)
